# backend/user/openapi.yaml
@@ -31,6 +31,31 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /user/login:
+        post:
+            tags:
+                - User
+            description: 登录
+            operationId: User_Login
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/LoginReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/LoginResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
     schemas:
         GetVerifyCodeResp:
@@ -43,11 +68,14 @@ components:
                     type: string
                 verifyCode:
                     type: string
+                    description: 验证码
                 verifyCodeTime:
                     type: integer
+                    description: 生成时间
                     format: int64
                 verifyCodeLife:
                     type: integer
+                    description: 有效期 second
                     format: int64
         GoogleProtobufAny:
             type: object
@@ -57,6 +85,24 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        LoginReq:
+            type: object
+            properties:
+                account:
+                    type: string
+                verifyCode:
+                    type: string
+            description: 登录
+        LoginResp:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int64
+                token:
+                    type: string
+                message:
+                    type: string
         Status:
             type: object
             properties:
